# rust-github-action-test

./: .rustfmt.toml  .rusty-hook.toml  Cargo.toml  Cross.toml  Makefile.toml  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml  release1.yml
